2005-11-19  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-possibly-synchronize-flags): A server
	must be explicitly online rather than "not explicitly offline" for
	its flags to be synchronized.

	* gnus-sum.el (gnus-summary-remove-process-mark): Always return t so
	that gnus-uu-unmark-thread will function correctly.

	* gnus-group.el (gnus-total-fetched-for): Reduced cutoff so that
	1024K is instead displayed as 1M.

2005-11-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* flow-fill.el (fill-flowed): Bind adaptive-fill-mode to nil. 

2005-11-16  Boris Samorodov <bsam@ipt.ru>  (tiny patch)

	* imap.el (imap-kerberos4-open): Ignore SSL stuff.

2005-11-13  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-read-local): Trivial fix to format of
	error message to display actual error condition.
	(gnus-agent-save-local): Avoid saving symbols that are bound to
	nil as they simply result in a warning message in
	gnus-agent-read-local.

2005-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Use make-local-variable
	rather than make-variable-buffer-local for file-precious-flag.

2005-11-12  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-braid-nov): Now tests new nov entries
	for duplicates which are removed.  The invalid sort check then
	triggers a rescan after the sort as sorting may have moved
	duplicate entries such that they can be cheaply detected.

2005-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Quote file-precious-flag.

2005-11-12  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-article-alist-save-format): Changed
	internal variable to a custom variable.  Changed default value
	from compressed(2) to uncompressed(1).
	(gnus-agent-read-agentview): Reversed revision 7.8 to restore
	support for uncompressed agentview files.  Taken together, reading